--- a/text/citace.bib
+++ b/text/citace.bib
@@ -438,4 +438,59 @@ keywords = "Plastic nuclear track detector "
     organization={Wikipedia, The Free Encyclopedia},
     urldate={2017-06-20},
 }
+
+%pille
+@online{pille2,
+    author={Hirn, A.},
+    title={Pille Measurements on ISS (May 2014 – March 2015)},
+    url={http://wrmiss.org/workshops/twentieth/Hirn_Pille.pdf},
+    date={2016-07-29},
+    organization={Workshops on Radiation Monitoring for the International Space Station},
+    urldate={2017-06-23},
+}
+@online{pille,
+    author={Hirn, A.},
+    title={Pille Measurements on ISS (May 2013 – March 2014)},
+    url={http://wrmiss.org/workshops/nineteenth/Hirn.pdf},
+    date={2015-03-16},
+    organization={Workshops on Radiation Monitoring for the International Space Station},
+    urldate={2017-06-23},
+}
+%zvezdaPalfalvi
+@online{wrmiss_SPD,
+    author={Pálfalvi, J.K.},
+    title={Passive dosimetry in the Service (Zvezda) module: 2010-2014.},
+    url={http://wrmiss.org/workshops/nineteenth/Palfalvi.pdf},
+    date={2015-03-16},
+    organization={Workshops on Radiation Monitoring for the International Space Station},
+    urldate={2017-06-23},
+}
+%PADLES
+@article{japonsky,
+title = "Area radiation monitoring on ISS Increments 17 to 22 using PADLES in the Japanese Experiment Module Kibo",
+journal = "Radiation Measurements",
+volume = "59",
+number = "",
+pages = "84 - 93",
+year = "2013",
+note = "",
+issn = "1350-4487",
+doi = "http://dx.doi.org/10.1016/j.radmeas.2013.05.008",
+url = "http://www.sciencedirect.com/science/article/pii/S1350448713002448",
+author = "A. Nagamatsu and K. Murakami and K. Kitajo and K. Shimada and H. Kumagai and H. Tawara",
+keywords = "Area PADLES",
+keywords = "Exp PADLES",
+keywords = "International Space Station (ISS)",
+keywords = "Japanese Experiment Module Kibo",
+keywords = "Space radiation dosimetry",
+keywords = "CR-39 PNTD",
+keywords = "TLD"
+}
+@online{kibo,
+    author={JAXA},
+    title={Japanese Experiment Module (KIBO)},
+    url={http://iss.jaxa.jp/en/kibo/},
+    date={2014-09-04},
+    urldate={2017-06-24},
+}
 %pozn.: clanky rozradit do kapitol (aby by to bylo prehlednejsi)
