--- a/text/parts/experimentDosis.tex
+++ b/text/parts/experimentDosis.tex
@@ -44,7 +44,7 @@ V rámci experimentu DOSIS, resp. DOSIS3D je v modulu Columbus rozmístěno jede
 \end{figure}
 
 \section{Průběh experimentů}%mozna DOPLNIT:DOSTEL-1 meril kratsi dobu nez DOSTEL-2!!!!!!!!!!!!!
-Experiment DOSIS probíhal mezi lety 2009 a 2011. Doba trvání experimentu DOSIS3D byla původně stanovena na rozmezí let 2012-2016, avšak v roce 2016 byla prodloužena a experiment stále běží. V rámci těchto experimentů bylo v modulu Columbus zatím k dnešnímu datu (13. 5. 2017) postupně upevněno 10 sad pasivních detektorů (DOSIS -- dvě sady, DOSIS3D -- devět sad) a na květen/červen 2017 se plánuje upevnění jedenácté. Každá sada obsahovala obsahovala výše zmíněných 11 PDP. Tab.~\ref{tab:dosis_timeline_passive} obsahuje informace o obměně sad pasivních detektorů (dopravení na ISS, instalaci, doba používání, ukončení měření,
+Experiment DOSIS probíhal mezi lety 2009 a 2011. Doba trvání experimentu DOSIS3D byla původně stanovena na rozmezí let 2012-2016, avšak v roce 2016 byla prodloužena a experiment stále běží. V rámci těchto experimentů bylo v modulu Columbus zatím k dnešnímu datu (13. 5. 2017) postupně upevněno 10 sad pasivních detektorů (DOSIS -- dvě sady, DOSIS3D -- devět sad) a na květen/červen 2017 se plánuje upevnění jedenácté. Každá sada obsahovala výše zmíněných 11 PDP. Tab.~\ref{tab:dosis_timeline_passive} obsahuje informace o obměně sad pasivních detektorů (dopravení na ISS, instalaci, doba používání, ukončení měření,
 návrat na Zem, nadmořská výška ISS); u sad 7, 8, 9 experimentu DOSIS3D nejsou doposud k dispozici údaje o nadmořské výšce; sada 10 je stále na ISS. 
 
 První z experimentů započal 15. července 2009 startem raketoplánu Endeavor, na jehož palubě byla
@@ -85,11 +85,11 @@ DOSIS3D	&1	&Květen 2012-	&125 (113)	&90,4	&397-417\\
   %\includegraphics[width=\textwidth]{dosis_timeline_passive}
 \end{table}
 \subsection{Vývoj nadmořské výšky a slunečního cyklu}\label{sec:dosis_altitudeSlunecniCyklus} %špatné odsazení
-Naměřená data jsou ovlivněna řadou parametrů. Nadmořská výška a fáze slunečního cyklu jsou jedny z nejvýznamnějších. 
+Naměřené dávky a dávkové ekvivalenty jsou ovlivněny řadou parametrů. Nadmořská výška a fáze slunečního cyklu jsou jedny z nejvýznamnějších. 
 
 Na obr. \ref{subfig:dosis_altitude} je znázorněn časový vývoj nadmořské výšky ISS. Pro DOSIS nadmořská výška nabývala hodnot z intervalu [337, 375] km, pro DOSIS3D nabývala hodnot z intervalu [398, 417] km. V obrázku lze vypozorovat prudký nárůst z cca 340 km do 375 km, který se udál ke konci experimentu DOSIS; tehdy již měřily pouze aktivní detektory. Změna nadmořské výšky ovlivňuje ozáření stanice (viz oddíl \ref{sec:kosmickeZareni_altitude}). 
 
-Z informací v oddílu \ref{sec:kosmickeZareni_solar} plyne, že za slunečního maxima je obdržená dávka nejmenší a naopak za slunečního minima největší (za předpokladu stálosti ostatních parametrů ovlivňujících velikost obdržené dávky). To je znázorněno na obr. \ref{subfig:dosis_solarCycle}, kde je zobrazena závislost četnosti detekovaných neutronů na čase (počet detekovaných neutronů klesá s rostoucí sluneční aktivitou). Experiment DOSIS probíhal za slunečního minima (2009 až 2011) a naopak experiment DOSIS3D probíhal za slunečního maxima, které nastalo v letech 2013 a 2014.   
+Z informací v oddílu \ref{sec:kosmickeZareni_solar} plyne, že za slunečního maxima je obdržená dávka od GCR nejmenší a naopak za slunečního minima největší (za předpokladu stálosti ostatních parametrů ovlivňujících velikost obdržené dávky). To je znázorněno na obr. \ref{subfig:dosis_solarCycle}, kde je zobrazena závislost četnosti detekovaných neutronů na čase (počet detekovaných neutronů klesá s rostoucí sluneční aktivitou). Experiment DOSIS probíhal za slunečního minima (2009 až 2011) a naopak experiment DOSIS3D probíhal za slunečního maxima, které nastalo v letech 2013 a 2014.   
 \begin{figure}[h]
   \centering
   \begin{subfigure}{0.45\textwidth}
@@ -144,14 +144,14 @@ NPI			 &Al$_2$O$_3$:C&Al$_2$O$_3$:C\\
 
 NPI používá dva TL detektory, Al$_2$O$_3$:C a CaSO$_4$:Dy. Oba dva jsou vyhodnocovány pomocí čtecího systému RA’94 (THORN EMI 9789 QB)+TOLEDO 654 TLD Reader; rychlost zahřívání u obou je rovna 10 $^{\circ}$C/s; první není předehříván, druhý je předehříván na 150 $^{\circ}$C (22 s); annealing probíhá 20 minut za 700 $^{\circ}$C (Al$_2$O$_3$:C), respektive 10 minut za 380 $^{\circ}$C (CaSO$_4$:Dy); ochlazovací rychlost je vysoká u obou; kalibrování probíhá u obou pomocí $^{137}$Cs; u obou je vyhodnocována plocha pod vyhřívací křivkou. Oba dva mají průměr roven 5 mm a tloušťku rovnou 1 mm.
 \subsection{Opticky stimulované luminiscenční detektory}
-Detektory založené na opticky stimulované luminiscenci využívají následující instituce: OSU, SCK$\cdot$CEN, NASA/SRAG, NIRS. Jsou vyrobené z jednoho materiálu (Al$_2$O$_3$:C), avšak liší se v následujících parametrech: čtecí systém, příkon energie stimulujícího laseru působící na na centimetr čtvereční detektoru, filtr, doba stimulace, kalibrační metoda a kalibrační zdroj, vyhodnocení OSL křivky. Všechny tyto parametry jsou pro detektory od jednotlivých institucí v tab. 6 v \cite{dosis}. 
+Detektory založené na opticky stimulované luminiscenci využívají následující instituce: OSU, SCK$\cdot$CEN, NASA/SRAG, NIRS. Jsou vyrobené z jednoho materiálu (Al$_2$O$_3$:C), avšak liší se v následujících parametrech: čtecí systém, příkon energie stimulujícího laseru působící na centimetr čtvereční detektoru, filtr, doba stimulace, kalibrační metoda a kalibrační zdroj, vyhodnocení OSL křivky. Všechny tyto parametry jsou pro detektory od jednotlivých institucí v tab. 6 v \cite{dosis}. 
 %nedělat tabulku, vypsat instituce normálně; ze je to jeden materiál (Al$_2$O$_3$:C), ale různé parametry; jejich vyhodnocování probíhá pomocí referenčního zdroje (ten vztah asi nepsat); to je asi vše, bude to krátké
 \subsection{Detektory stop v pevné fázi}
 Všechny používané detektory stop v pevné fázi jsou CR-39. V tab. \ref{tab:dosis_pouzivaneTED} jsou uvedeny instituce, které TED využívají; tabulka také obsahuje výrobce daného TED. Avšak tato tabulka již není aktuální, jelikož většina institucí přešla v posledních letech na TASTRAK původně využívaný pouze MTA EK. Různorodost využívaných TED a jejich způsobů vyhodnocení totiž komplikovalo vzájemné porovnávání a interpretaci naměřených dat \cite{cesky}. Důležitými parametry jsou: doba leptání; teplota, při níž leptání probíhá; koncentrace NaOH, jímž se leptalo; odleptaná vrstva; analyzovaná plocha.
 \begin{table}[h]
   \def\arraystretch{0.8}
   \centering
-  \caption{Přehled institucí používající TED, u každé instituce jsou uvedeny výrobci příslušného detektoru. V posledních letech většina institucí přešla k používání TASTRAKu od MTA EK. \cite{dosis}}
+  \caption{Přehled institucí používající TED, u každé instituce jsou uvedeny výrobci příslušného detektoru. V posledních letech většina institucí přešla k používání TASTRAKu. \cite{dosis}}
   \label{tab:dosis_pouzivaneTED}
   \begin{tabular}{ll}
 	\toprule
@@ -193,10 +193,10 @@ Na obrázku \ref{fig:dosis_activeDetectors} je mimo jiné vidět DOSTEL. Informa
 %detektor lze vyhodnotit najednou. Detektor se leptá při 70 $^{\circ}$C v 6,25 N koncentrovaném roztoku NaOH, odleptaná vrstva je tlustá 7,5/20,1 $\mu$m; analyzuje se plocha o velikosti 0,5 cm$^2$ (v obou případech) z důvodu zajištění dostatečné statistiky. Po leptání následuje u obou detektorů nasnímání stop lineárním snímacím zařízením s vysokým rozlišením (které je součástí mikroskopu HSP-1000, \cite{dosis_HSP1000}), poté jsou snímky se stopami analyzovány programem HspFit.
 
 %To. že nám (NPI) vyšla kalibrační krivka jinak než těm madarum, tak to psat do casti o detektorech
-\section{Výsledky}
+\section{Data z luminiscenčních detektorů}
 Zde jsou uvedeny výsledky publikované v \cite{dosis}. Jedná se o data naměřená TL a OSL detektory z obou sad DOSIS a z prvních šesti sad DOSIS3D, tedy o data naměřená mezi lety 2009 a 2015. %Pro větší názornost jsou zde uvedeny i obrázky z \cite{dosis2}, které byly získány z dat naměřených aktivními detektory. 
 
-Na naměřená data lze pohlížet z několika hledisek. Nejprve je uvedeno srovnání dat získaných z několika TL a ze všech OSL detektorů v rámci jedné sady experimentu DOSIS3D, konkrétně druhé. Poté následuje srovnání dat, které byly získány TL detektorem $^7$LiF:Mg,Ti v rámci všech osmi vyhodnocených sad. Dále je zmíněno stručné porovnání dat z pasivních a aktivních detektorů a nakonec jsou výsledky srovnány s daty získaných během jiných experimentů (popsaných ve článcích \cite{passDetectors, dataTLD_RR, ambrozova_dvaExperimenty}).
+Na naměřená data lze pohlížet z několika hledisek. Nejprve je uvedeno srovnání dat získaných z několika TL a ze všech OSL detektorů v rámci jedné sady experimentu DOSIS3D, konkrétně druhé. Poté následuje srovnání dat, které byly získány TL detektorem $^7$LiF:Mg,Ti v rámci všech osmi vyhodnocených sad. Dále je zmíněno stručné porovnání dat z pasivních a aktivních detektorů a nakonec jsou výsledky srovnány s daty získaných během jiných experimentů (popsaných ve článcích \cite{passDetectors, dataTLD_RR, ambrozova_dvaExperimenty, pille, pille2, wrmiss_SPD, japonsky}).
 %Srovnáním dat od TL detektorů z DOSIS3D s daty získanými v ISS mimo modul Columbus od detektorů stejného materiálu plyne, že velmi závisí na lokálním stínění. Data se v závislosti na jeho tloušťce mohou lišit až dvojnásobně.  
 %Vzhledem k tomu, že tato práce je primárně zaměřena na detektory stop v pevné fázi, tak jsou informace v tomto oddíle značně povrchní. %MOZNA ZMENIT?!!!!
 \subsection{Srovnání dat pasivních detektorů v rámci jedné sady}
@@ -249,14 +249,14 @@ U všech osmi sad sleduje dávkový příkon stejný vývoj přes 11 PDP jako v 
 
 Absorbovaná dávka z detektorů, které byly umístěny u čelní stěny vzhledem k pohybu ISS (jedná se o PDP 3, 4, 8, 9, 10), je systematicky menší než absorbovaná dávka z detektorů umístěných u zadní stěny (PDP 1, 2, 5, 6, 7, X)~\cite{dosis}. To je možné vysvětlit anizotropií zachycených protonů v SAA (viz oddíl \ref{sec:kosmickeZareni_anizotropie}).
 \subsection{Srovnání dat pasivních a aktivních detektorů}%řešit tu vodu (absorbed dose in water)???!!!!!!!!
-V tab. \ref{tab:dosis_vysl_srovnaniPassiveActive} jsou srovnány absorbované dávky určené pomocí $^7$LiF:Mg,Ti a pomocí aktivního detektoru DOSTEL-1. Data od $^7$LiF:Mg,Ti pocházejí z PDP X (viz obr.~\ref{fig:columbus_rozmisteni}), který je upevněn na boxu, v němž se nachází aktivní detektory (viz obr.~\ref{fig:dosis_activeDetectors}). Absorbované dávky aktivního detektoru byly určeny zprůměrováním dat přes časový interval odpovídající dané sadě (viz tab. \ref{tab:dosis_timeline_passive}). Hodnoty v tab. \ref{tab:dosis_vysl_srovnaniPassiveActive} představují přepočtené absorbované dávky ve vodě. Je vidět, že data z obou typů detektorů jsou ve shodě. 
+V tab. \ref{tab:dosis_vysl_srovnaniPassiveActive} jsou srovnány dávkové příkony určené pomocí $^7$LiF:Mg,Ti a pomocí aktivního detektoru DOSTEL-1. Data od $^7$LiF:Mg,Ti pocházejí z PDP X (viz obr.~\ref{fig:columbus_rozmisteni}), který je upevněn na boxu, v němž se nachází aktivní detektory (viz obr.~\ref{fig:dosis_activeDetectors}). Absorbované dávky aktivního detektoru byly určeny zprůměrováním dat přes časový interval odpovídající dané sadě (viz tab. \ref{tab:dosis_timeline_passive}). Hodnoty v tab. \ref{tab:dosis_vysl_srovnaniPassiveActive} představují přepočtené absorbované dávky ve vodě. Je vidět, že data z obou typů detektorů jsou ve shodě. 
 
 Při porovnávání dat z TLD a DOSTEL je třeba brát v úvahu několik věcí. Zaprvé účinnost detekce částic nad cca 10 keV/$\mu$m u TLD klesá, zatímco u DOSTEL je v podstatě stále stoprocentní. Dále pasivní detektory byly v PDP umístěny okolo 95~\% svého měřícího cyklu, zbytek času strávily cestováním na, resp. z ISS; nicméně toto pravděpodobně nezaneslo do měření nějakou větší chybu, protože při průletu atmosférou detektory obdrží zanedbatelnou dávku díky krátkému času letu.
 \begin{table}[H]
   \centering
   \def\arraystretch{1}
   \footnotesize
-  \caption{Porovnání absorbovaných dávek určených pomocí aktivního detektoru DOSTEL-1 a pomocí TLD (materiál $^7$LiF:Mg,Ti), které byly umístěny v PDP X, v rámci dosud vyhodnocených sad~\cite{dosis}.}
+  \caption{Porovnání dávkových příkonů určených pomocí aktivního detektoru DOSTEL-1 a pomocí TLD (materiál $^7$LiF:Mg,Ti), které byly umístěny v PDP X, v rámci dosud vyhodnocených sad~\cite{dosis}.}
   \label{tab:dosis_vysl_srovnaniPassiveActive}
   \begin{tabular}{lll|ll}
 	\toprule
@@ -302,7 +302,7 @@ Srovnejme nyní data od TLD Al-P z druhé fáze experimentu MATROSHKA-R (viz tab
   \label{tab:dosis_passDetectors_vysledky}
   \begin{tabular}{lll}
 	\toprule
-	SPD&$D$ [$\mu$Gy/den]\\
+	SPD&$\dot{D}$ [$\mu$Gy/den]\\
 	\midrule
 	1&$445\pm31$\\
 	2&$417\pm29$\\
@@ -313,20 +313,68 @@ Srovnejme nyní data od TLD Al-P z druhé fáze experimentu MATROSHKA-R (viz tab
 	\bottomrule
   \end{tabular}
 \end{table}
-Dávkové příkony z modulu Pirs jsou jasně nejvyšší, poté následují dávkové příkony z modulu Zvezda; horní hranice rozsahu dávkových příkonů z modulu Columbus odpovídá minimální hodnotě naměřené ve Zvezdě. Rozdíl mezi Pirsem a Zvezdou je dán rozdílem v tloušťce stínění \cite{passDetectors}. Stínění zcela určitě hrálo roli také v naměření mnohem nižší dávky v modulu Columbus, avšak zde není srovnání tolik relevantní, jelikož se jedná o data naměřená různými TLD (tj. mají různou účinnost). Na obr. \ref{fig:dosis_passDetectors_LETspektrum} jsou srovnána $\LET$ spektra z modulu Pirs (SPD 2) a z modulu Zvezda (SPD 6); je zcela jasně vidět, že méně stíněný Pirs obdržel větší dávku od částic s $\LET<100$ keV/$\mu$m, u částic s vyšším $\LET$ žádný rozdíl
+Dávkové příkony z modulu Pirs jsou jasně nejvyšší, poté následují dávkové příkony z modulu Zvezda; horní hranice rozsahu dávkových příkonů z modulu Columbus odpovídá minimální hodnotě naměřené ve Zvezdě. Rozdíl mezi Pirsem a Zvezdou je dán rozdílem v tloušťce stínění \cite{passDetectors}. Stínění mohlo hrát roli i v naměření mnohem nižší dávky v modulu Columbus, avšak vzhledem k rozdílné relativní účinnosti Al-P a $^7$LiF:Mg,Ti to nemůžeme tvrdit. Na obr. \ref{fig:dosis_passDetectors_LETspektrum} jsou srovnána $\LET$ spektra z modulu Pirs (SPD 2) a z modulu Zvezda (SPD 6); je zcela jasně vidět, že méně stíněný Pirs obdržel větší dávku od částic s $\LET<100$ keV/$\mu$m, u částic s vyšším $\LET$ žádný rozdíl
 není \cite{passDetectors}. (Poznámka: lze srovnat obr. \ref{fig:dosis_passDetectors_LETspektrum} s obr. \ref{fig:stineni} -- rozdíl ve spektrech je způsoben tím, že první obr. představuje diferenciální spektrum, zatímco druhý zobrazuje integrální spektrum.) 
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.65\textwidth]{dosis_LETspektrum_passDetectors.jpg}
-  \caption{$\LET$ spektra z dat naměřených v modulu Pirs (Piers-1) a v modulu Zvezda (SM) v přílušných SPD.~\cite{passDetectors}}
+  \caption{$\LET$ spektra z dat naměřených v modulu Pirs (Piers-1) a v modulu Zvezda (SM) v příslušných SPD.~\cite{passDetectors}}
   \label{fig:dosis_passDetectors_LETspektrum}
 \end{figure}
-\item Lepší srovnání poskytuje měření z roku 2012, které také proběhlo v rámci MATROSHKA-R. Bylo prováděno TL detektorem CaSO$_4$, který byl umístěn na šesti pozicích v ruské části ISS (jeden byl v modulu Pirs, jeden v ruském výzkumném modulu~\cite{researchModule} a čtyři v modulu Zvezda). Měření započalo v květnu 2012 a probíhalo jeden rok, což odpovídá první a druhé sadě experimentu DOSIS3D. Průměrný dávkový příkon naměřený ve Zvezdě je roven 262 $\mu$Gy/den, což je velmi blízké hodnotě průměrného dávkového příkonu naměřeného v rámci DOSIS3D (TL detektorem CaSO$_4$:Dy), který je roven 275 $\mu$Gy/den. Data z Pirsu a výzkumného modulu dosahují hodnot okolo 500 $\mu$Gy/den, jedná se zase o důsledek nižšího stínění. Z uvedených informací (i z předchozích odrážek) plyne, že za předpokladu
-  stálosti nadmořské výšky a dalších parametrů jsou rozdíly v dávkách dány hlavně stíněním celého objektu, menší rozdíly jsou pak způsobeny lokálním stíněním (které je představováno např. uloženými zásobami, přístroji). \cite{ambrozova_dvaExperimenty}
-  \item Jako poslední uvedeme srovnání s daty, které byly naměřeny v jiné nadmořské výšce. Satelit BION-M1 byl vypuštěn 19. dubna 2013 a na orbitě o nadmořské výšce 575 km setrval 30 dní. Obsahoval mj. biologické vzorky a detektory, konkrétně TLD CaSO$_4$:Dy a TED HARZLAS TD-1. Ty byly uloženy ve čtyřech boxech uvnitř satelitu a ve dvou boxech na vnějším plášti satelitu. Průměr z dávkových příkonů naměřených ve vnitřních boxech pomocí TLD činí 967 $\mu$Gy/den, ve vnějších boxech 2,2 mGy/den. Nadmořská výška ISS byla přibližně 409 km a v modulu Columbus byl naměřen dávkový dávka cca 275 $\mu$Gy/den, viz předchozí odrážka. Tyto obrovské rozdíly v naměřených hodnotách ukazují důležitost vlivu změny nadmořské výšky (ISS proti BION-M1, ovšem dále je třeba vzít v úvahu, že BION-M1 měl méně
-	stínění) a stínění (vnitřek proti vnějšku satelitu BION-M1).~\cite{ambrozova_dvaExperimenty}
-	
+\item Lepší srovnání poskytuje měření z roku 2012, které také proběhlo v rámci MATROSHKA-R. Bylo prováděno TL detektorem CaSO$_4$:Dy, který byl umístěn na šesti pozicích v ruské části ISS (jeden byl v modulu Pirs, jeden v ruském výzkumném modulu~\cite{researchModule} a čtyři v modulu Zvezda). Měření započalo v květnu 2012 a probíhalo jeden rok, což odpovídá první a druhé sadě experimentu DOSIS3D. Průměrný dávkový příkon naměřený ve Zvezdě je roven 262 $\mu$Gy/den, což je velmi blízké hodnotě průměrného dávkového příkonu naměřeného v rámci DOSIS3D (TL detektorem CaSO$_4$:Dy), který je roven 275 $\mu$Gy/den. Data z Pirsu a výzkumného modulu dosahují hodnot okolo 500 $\mu$Gy/den, jedná se zase o důsledek nižšího stínění. Z uvedených informací (i z předchozích odrážek) plyne, že za předpokladu
+  stálosti nadmořské výšky a dalších parametrů jsou rozdíly v dávkách dány hlavně stíněním celého objektu, menší rozdíly jsou pak způsobeny lokálním stíněním (které je představováno např. uloženými zásobami, přístroji).~\cite{ambrozova_dvaExperimenty}
+  \item Článek~\cite{ambrozova_dvaExperimenty} poskytuje i porovnání s daty, které byly naměřeny v jiné nadmořské výšce. Satelit BION-M1 byl vypuštěn 19. dubna 2013 a na orbitě o nadmořské výšce 575 km setrval 30 dní. Obsahoval mj. biologické vzorky a detektory, konkrétně TLD CaSO$_4$:Dy a TED HARZLAS TD-1. Ty byly uloženy ve čtyřech boxech uvnitř satelitu a ve dvou boxech na vnějším plášti satelitu. Průměr z dávkových příkonů naměřených ve vnitřních boxech pomocí TLD činí 967 $\mu$Gy/den, ve vnějších boxech 2,2 mGy/den. Nadmořská výška ISS byla přibližně 409 km a v modulu Columbus byl naměřen dávkový dávka cca 275 $\mu$Gy/den, viz předchozí odrážka. Tyto obrovské rozdíly v naměřených hodnotách ukazují důležitost vlivu změny nadmořské výšky (ISS proti BION-M1, ovšem dále je třeba vzít v úvahu, že BION-M1 měl méně
+	stíněn) a stínění (vnitřek proti vnějšku satelitu BION-M1).
+  \item V japonském modulu Kibo \cite{kibo} probíhá již od jeho připojení k ISS v roce 2008 měření pomocí TLD (prášek Mg$_2$SiO$_4$:Tb) a TED (CR-39 materiály HARZLAS TD-1 a Fukuvi chemical) v rámci projektu PADLES (PAssive Dosimeters for Lifescience Experiments in Space). V letech 2008 až 2010 proběhly tři obměny detektorů (viz tab.~\ref{tab:dosis_kibo}).
+	\begin{table}[ht]
+	  \centering
+	  \caption{Obměna PADLES v modulu Kibo. \cite{japonsky}}
+	  \label{tab:dosis_kibo}
+	  \begin{tabular}{llll}
+		\toprule
+	Fáze&Počátek-konec&Doba trvání [dny]&Nadmořská výška ISS [km]\\
+	\midrule
+	1&Červen 2008-Březen 2009&278&339-359\\
+	2&Březen 2009-Srpen 2009&164&343-355\\
+	3&Září 2009-Duben 2010&214&337-350\\
+	\bottomrule
+	  \end{tabular}
+	\end{table}
+	Detektory byly umístěny na dvanácti pozicích v Přetlakovém modulu, v případě třetí fáze navíc i na pěti pozicích v Logistickém modulu (přetlaková komora). Průměrný dávkový příkon naměřený TLD v první fázi je $311\pm 30$ $\mu$Gy/den, v druhé fázi $268\pm29$ $\mu$Gy/den, v třetí fázi pro Přetlakový modul $286\pm33$ $\mu$Gy/den a pro Logistický modul $289\pm27$ $\mu$Gy/den. V době první fáze PADLES experiment DOSIS ještě neprobíhal. Druhá a třetí fáze PADLES odpovídá přibližně první a druhé sadě experimentu DOSIS (červenec 2009 až květen 2010). Rozsahy dávkových příkonů z $^7$LiF:Mg,Ti z těchto sad jsou přibližně $[225;300]$ $\mu$Gy/den, resp. $[200;265]$ $\mu$Gy/den (viz obr. \ref{fig:dosis_vysl_viceSad}). Vidíme, že data z modulů Kibo a Columbus jsou velmi podobná. To, že $\dot{D}$ z druhé fáze na třetí fázi PADLES
+	vzrostl,
+	zatímco u DOSIS klesl, může být dáno různým počátkem a koncem fází u PADLES a DOSIS. \cite{japonsky}
+  \item K monitorování dávkových příkonů v ISS se používá i Pille TLD systém. Tento systém byl využíván na každé kosmické stanice od druhé poloviny 70. let 20. století.
+	\begin{table}[ht]
+	  \centering
+	  \caption{Rozsahy průměrných týdenních dávkových příkonů naměřených TLD systémem Pille v daný časový úsek~\cite{pille, pille2}. Za dvojitou svislou čárou jsou průměrné dávkové příkony od CaSO$_4$:Dy pro $i$-tou sadu DOSIS3D, kde $i=$číslo řádku.}
+	  \label{tab:dosis_pille}
+	  \begin{tabular}{l|l||l}
+		\toprule
+		\multicolumn{2}{c||}{Pille-Zvezda}&DOSIS3D\\
+		\midrule
+		Časový úsek&$\dot{D}$ [$\mu$Gy/den]&$\dot{D}$ [$\mu$Gy/den]\\
+		\midrule
+		Květen $\ $ 2012-Říjen 2012&$[160;200]$&$264$	\\
+		Listopad 2012-Duben  2013&$[150;210]$&$250$	\\
+		Květen $\ $ 2013-Listopad 2013&$[165;190]$&$240$	\\
+		Listopad 2013-Květen  2014&$[140;180]$&$240$	\\
+		Květen $\ $ 2014-Listopad 2014&$[140;170]$&$220$	\\
+		Listopad 2014-Březen  2015&$[130;160]$&$215$	\\
+		\bottomrule
+	  \end{tabular}
+	\end{table}
+	 Jedná se o TL detektor CaSO$_4$:Dy (avšak v jiné formě než v jakou používá NPI) s čtecím systémem, což umožňuje vyhodnocovat detektory přímo na orbitě. Na ISS se nachází v modulu Zvezda od roku 2003, kde se používá jako osobní dozimetr při CME, při výstupech do vesmíru a také pro mapování prostorové distribuce dávky. Detektory byly v roce 2009 obměněny a v současnosti se jich ve Zvezdě nachází dvanáct. Naměřené dávky neprošly korekcí na $\LET_{\text{H$_2$O}}>10$ keV/$\mu$m a nebyly převedeny na absorbované dávky ve vodě (resp. tkáňově ekvivalentním materiálu). V levé části tab. \ref{tab:dosis_pille} jsou
+	 přibližné rozsahy průměrných týdenních dávkových příkonů naměřených v daný časový úsek.	První časový úsek Pille odpovídá přibližně první sadě DOSIS3D, druhý úsek druhé sadě DOSIS3D a takto to pokračuje až k šestému úseku/šesté sadě. Pravá část tab.~\ref{tab:dosis_pille} obsahuje průměrné hodnoty dávkových příkonů od CaSO$_4$ pro danou sadu; tyto dávkové příkony byly získány přenásobením průměrné hodnoty z $^7$LiF:Mg,Ti (viz obr.~\ref{fig:dosis_vysl_viceSad}) poměrem odezev CaSO$_4$:Dy a $^7$LiF:Mg,Ti (viz tab.~\ref{tab:dosis_TLD_ratio}). Vidíme, že dávkové příkony od Pille jsou systematicky nižší. Částečně to bude dáno tím, že výsledky od Pille nejsou převedeny na absorbovanou dávku ve vodě. Dále pozorujeme, že $\dot{D}$ od Pille sleduje podobný trend jako
+	 $\dot{D}$ od DOSIS3D, tzn. pozvolné klesání.~\cite{pille, pille2}
+ \end{itemize}
+ \textbf{Shrnutí:} V první odrážce jsme srovnali $\dot{D}$ z DOSIS\%DOSIS3D s $\dot{D}$ z americké části ISS (program RAM). Dávkové příkony z RAM měly stejnou minimální hodnotu jako dáv. příkony z modulu Columbus, ale maximální hodnotu měly vyšší. Také se zjistilo, že dávkové příkony se mohou lišit v jednom modulu v závislosti na lokálním stínění až dvojnásobně.
+ 
+ Ve druhé, třetí a šesté odrážce jsme data z DOSIS\&DOSIS3D srovnávali s daty naměřenými v ruské části ISS, hlavně v modulu Zvezda. V druhé odrážce jsme zjistili, že dávkové příkony byly vyšší ve Zvezdě, naopak v třetí a páté vyšly dávkové příkony vyšší v modulu Columbus. Příčinou jiného výsledku v druhé odrážce jsou pravděpodobně odlišné relativní účinnosti použitých TLD (experimentů diskutovaných v druhé odrážce).
 
-\end{itemize}
-%Srovnáním dat od TL detektorů z DOSIS3D s daty získanými v ISS mimo modul Columbus od detektorů stejného materiálu plyne, že velmi závisí na lokálním stínění. Data se v závislosti na jeho tloušťce mohou lišit až dvojnásobně.  
+ V páté odrážce jsme porovnali dávkové příkony z modulu Columbus s dávkovými příkony v japonském modulu Kibo. Dávkové příkony vycházejí podobně.
+
+ Ve čtvrté odrážce proběhlo srovnání s dávkovými příkony naměřenými v satelitu BION-M1, který měl cca o 170 km větší nadmořskou výšku než ISS. To korelovalo s mnohem vyššími dávkovými příkony oproti $\dot{D}$ z modulu Columbus. Dávkové příkony z povrchu pláště satelitu jsou více jak dvojnásobné ve srovnání s dávkovými příkony uvnitř satelitu.
+
+
+ %Srovnáním dat od TL detektorů z DOSIS3D s daty získanými v ISS mimo modul Columbus od detektorů stejného materiálu plyne, že velmi závisí na lokálním stínění. Data se v závislosti na jeho tloušťce mohou lišit až dvojnásobně.  
 
