--- a/text/parts/detektory.tex
+++ b/text/parts/detektory.tex
@@ -1,12 +1,14 @@
 \chapter{Pasivní detektory používané k monitorování kosmického záření}\label{sec:detektory_detektory}
 Pasivní detektory nepotřebují napájení, jsou dobře skladné (malé rozměry, malá hmotnost) a bezpečné, což je činí vhodnými měřícími prostředky ve vesmíru. Mezi jejich hlavní zápory patří, že nedodávají data v reálném čase a že pro vyhodnocení musí být zpravidla dopraveny na Zem do příslušné laboratoře~\cite{benton}.
 
-K monitorování kosmického záření se používají detektory založené na opticky stimulované luminiscenci (OSLD), termoluminiscenční detektory (TLD) a detektory stop v pevné fázi (TED, nuclear track etched detectors/solid state nuclear track detectors). OSLD se využívají pouze okrajově a tato práce o nich nepojednává.
+K monitorování kosmického záření se používají hlavně termoluminiscenční detektory (TLD) a detektory stop v pevné fázi (TED, nuclear track etched detectors/solid state nuclear track detectors). V menší míře se využívají i detektory založené na opticky stimulované luminiscenci (OSLD), bublinkové detektory \ldots V této kapitole rozebereme TLD a TED.
 
-Výstupem z TLD je dávka, která se absorbovala v detektoru za celý čas měření. Oproti tomu pomocí TED je navíc možné změřit $\mathit{LET}$ spektrum v rozsahu, který je rozebrán dále v textu; $\mathit{LET}$ je lineární přenos energie. Kombinací dat z TLD a z TED lze určit celkový dávkový ekvivalent~\cite{benton}, avšak nezjistí se kvalita záření (většinou).
+Výstupem z TLD je dávka, která se absorbovala v detektoru za celý čas měření, avšak nezjistí se kvalita záření (většinou). Oproti tomu pomocí TED je navíc možné změřit $\mathit{LET}$ spektrum v rozsahu, který je rozebrán dále v textu; $\mathit{LET}$ je lineární přenos energie. Kombinací dat z TLD a z TED lze určit celkový dávkový ekvivalent~\cite{benton}.
 \section{Termoluminiscenční detektory}\label{sec:detektory_TLD}
-Termoluminiscence je jev vyskytující se u některých pevných látek. Jeho podstata spočívá v tom, že je-li látka ozářena, pak při zahřívání vyzařuje světlo, jehož množství je přímo úměrné energii, která byla při ozáření v látce deponována. Zjednodušeně lze jev vysvětlit následovně: ionizující záření při interakci s látkou mimo jiné vytrhává elektrony z valenčního pásu, čímž vznikají iontové páry (záporný elektron a kladná díra) a vytržené elektrony přecházejí do vodivostního pásu; část vytržených elektronů anihiluje s děrami (což uvolňuje tepelnou energii), avšak některé z nich se zachytí na tzv. elektronových pastech (nehomogenity v látce atp.); aby se elektron z pasti dostal, tak mu musí být dodána energie k překonání vazby, což se děje při zahřívání látky; uvolněný elektron následně
-anihiluje s dírou, přičemž energie je vyzářena ve formě elektromagnetického záření (přibližně ve viditelném spektru) nebo je předána tzv. luminiscenčnímu centru, které energii taktéž přemění na světlo. Luminiscenční centra jsou tvořena stopovými příměsemi prvků (např. Mn, Dy, Tm, Cu, C, \ldots). Světelný signál je zesílen fotonásobičem a poté vyhodnocen.
+Termoluminiscence je jev vyskytující se u některých pevných látek. Jeho podstata spočívá v tom, že je-li látka ozářena, pak při zahřívání vyzařuje světlo, jehož množství je přímo úměrné energii, která byla při ozáření v látce deponována. Zjednodušeně lze jev vysvětlit následovně: ionizující záření při interakci s látkou mimo jiné vytrhává elektrony z valenčního pásu, čímž vznikají iontové páry (záporný elektron a kladná díra) a vytržené elektrony přecházejí do vodivostního pásu. Část vytržených elektronů anihiluje s děrami (což uvolňuje tepelnou energii), avšak některé z nich se zachytí na tzv. elektronových pastech (nehomogenity v látce atp.). Aby se elektron z pasti dostal, tak mu musí být dodána energie k překonání vazby, což se děje při zahřívání látky. Uvolněný elektron následně
+anihiluje s dírou, přičemž energie je vyzářena ve formě elektromagnetického záření (přibližně ve viditelném spektru) nebo je předána tzv. luminiscenčnímu centru, které energii taktéž přemění na světlo. Luminiscenční centra mohou být tvořena stopovými příměsemi prvků (např. Mn, Dy, Tm, Cu, C, \ldots). Světelný signál je zesílen fotonásobičem a poté vyhodnocen. 
+
+Dodání energie pro vytržení elektronu z pasti nemusí být prováděno jen zahříváním látky, ale třeba i jejím osvícením. Tento jev je nazýván optická luminiscence a jsou na něm založeny OSLD.
 
 Pro vyhodnocení TL signálu je důležitým pojmem vyhřívací křivka TLD, což je závislost světelného toku (respektive elektrického signálu z fotonásobiče) na teplotě. Odezva TLD se určí právě z této křivky (např. jako plocha pod křivkou, plocha pod píkem, výška píku~\cite{dosis}) a na základě kalibrace ve známém zdroji lze určit absorbovanou dávku.
 
@@ -15,7 +17,7 @@ TLD měří spolehlivě částice s $\mathit{LET}$ nižším než cca 10 keV/$\m
   \mathit{RR}=\frac{\left(TL_{\text{odezva}}/D_{\text{tkáň}}\right)_Y}{\left(TL_{\text{odezva}}/D_{\text{tkáň}}\right)_{\gamma}}\,,
   \label{eq:detektory_TLD_RR}
 \end{equation}
-kde $(TL_{\text{odezva}})_Y$, resp. $(TL_{\text{odezva}})_{\gamma}$ je odezva TLD po ozáření dávkou $(D_{\text{tkáň}})_Y$, resp. $(D_{\text{tkáň}})_{\gamma}$, přičemž tyto dávky jsou si číselně rovny. Jinak řečeno $\mathit{RR}$ je definována jako poměr odezev po ozáření stejnou dávkou v tkáni (z níž je TLD vyroben) způsobenou částicemi $Y$ a referenčním zářením $\gamma$~\cite{TLD_RR}. 
+kde $(TL_{\text{odezva}})_Y$, resp. $(TL_{\text{odezva}})_{\gamma}$ je odezva TLD po ozáření dávkou $(D_{\text{tkáň}})_Y$, resp. $(D_{\text{tkáň}})_{\gamma}$, přičemž tyto dávky jsou si číselně rovny. Jinak řečeno $\mathit{RR}$ je definována jako poměr odezev po ozáření stejnou dávkou v tkáni způsobenou částicemi $Y$ a referenčním zářením $\gamma$~\cite{TLD_RR}. 
 
 Na vývoj $\RR$ se podíváme u dvou TLD používaných Oddělením dozimetrie záření ÚJF AV ČR (v dalším textu je používána anglická zkratka NPI, Nuclear Physics Institute). Jedná se o detektory Al$_2$O$_3$:C a CaSO$_4$:Dy. Tyto detektory byly, resp. jsou používány v experimentech DOSIS a DOSIS3D. V obr. \ref{fig:detektory_TLD_RR} jsou hodnoty relativní odezvy (relativní vůči $^{60}$Co) těchto detektorů pro částice s různým $\LET$ získané při experimentálním ozařování~\cite{dataTLD_RR}. Lze pozorovat, že s rostoucím $\LET$ relativní odezva u obou detektorů klesá, u Al$_2$O$_3$:C mnohem rychleji než u CaSO$_4$:Dy. Pro zpřesnění měření v polích částic s různým $\LET$ je potřeba provést korekci TL odezev, jinak dochází k podhodnocení dávky; více informací v~\cite{TLD_RR}.
 \begin{figure}[H]
@@ -28,7 +30,7 @@ Na vývoj $\RR$ se podíváme u dvou TLD používaných Oddělením dozimetrie z
 V některých pevných látkách vznikají při ozáření stabilní mikropoškození, tzv. latentní stopy, které mohou být vhodným způsobem zvětšeny. Následně lze zvětšené stopy spočítat např. pomocí mikroskopu, přičemž počet stop je úměrný počtu částic, které s materiálem interagovaly. Používají-li se tyto látky jako detektory ionizujícího záření, pak je nazýváme detektory stop v pevné fázi (TED). Z velikosti stop lze určit $\LET$ a $D$ (dávka) odpovídající částice a tím i dávkový ekvivalent $H$. Mezi materiály s touto schopností patří různá skla, minerální krystaly, plasty, nedávno byla tato vlastnost objevena i u některých kovů, intermetalických sloučenin a supravodivých oxidů; tento jev byl poprvé pozorován v roce 1958 u krystalů LiF \cite{objevTED}. Jako TED
 se používají hlavně plasty, skla a minerální krystaly.
 
-TED jsou schopné měřit pouze částice s $\LET$ vyšším než je určitá prahová hodnota, která je různá pro odlišné materiály, ale pohybuje se kolem 10 kev/$\mu$m~\cite{ambrozova_dvaExperimenty}. Rozsah měřitelných $\LET$ je omezený i shora, tato hodnota také zavisí na materiálu.  
+TED jsou schopné měřit pouze částice s $\LET$ vyšším než je určitá prahová hodnota, jež je různá pro odlišné materiály. Pro plasty, které jsou nejcitlivější, se pohybuje kolem 10 keV/$\mu$m~\cite{ambrozova_dvaExperimenty}. Rozsah měřitelných $\LET$ je omezený i shora, tato hodnota také zavisí na materiálu.  
 
 Latentní stopy jsou nejčastěji zvětšovány chemickým leptáním. Tato metoda vychází z faktu, že poškozené části materiálu se leptají rychleji než nepoškozené. Někdy se používá dvoustupňové (per partes) leptání, které má tu výhodu, že po první fázi jsou zřetelné stopy vytvořené částicemi s krátkým dosahem a s velkým $\LET$ ($> 300$ keV/$\mu$m), které by při jednostupňovém dlouhém leptání byly odstraněny, a po druhé fázi naopak lze identifikovat stopy vytvořené částicemi s malým $\LET$ (až do detekčního prahu), čímž se významně zvýší rozsah detekovatelných částic \cite{cesky}. 
 
@@ -78,7 +80,7 @@ a $t$ je doba, po kterou se leptalo, tj. $d=V_Mt$ je tloušťka odleptané vrstv
   \label{fig:detektory_stopy}
 \end{figure}
 
-Kalibrační křivka, neboli vztah mezi $V$ a $\LET$, je určena experimentálním ozařováním příslušného TED. Pro proklad naměřených dat lze použít nejrůznější funkce, příkladem je polynom třetího stupně, který má výhodu jednoduchosti. Je důležité poznamenat, že od určitých hodnot $\LET$ nejsou k dispozici kalibrační body, a proto nelze používat kalibrační křivku od těchto hodnot.
+Kalibrační křivka, neboli vztah mezi $V$ a $\LET$, je určena experimentálním ozařováním příslušného TED. Pro proklad naměřených dat lze použít nejrůznější funkce, příkladem je polynom třetího stupně, který má výhodu jednoduchosti. Je důležité poznamenat, že od určitých hodnot $\LET$ nejsou k dispozici kalibrační body, a proto jsou za touto hranicí určené hodnoty $\LET$ zatížené velikou nepřesností.
 
 Existuje minimální úhel dopadu částice na detektor, při němž je stopa stále ještě po leptání zřetelná, tj. není leptáním odstraněna. Tento úhel se nazývá kritický úhel a je definován vztahem $\theta_k=1/V$. Počet detekovaných částic na plochu $N$ je třeba opravit na částice, které dopadly pod menším úhlem než $\theta_k$; za předpokladu izotropního rozložení dopadajících částic (což lze ve vesmíru brát jako splněné) to je možné provést vynásobením koeficientem 
 \begin{equation}
